...
    <string name="no_follow">Try following someone!</string>
    <string name="no_favorite">Try adding a track to your favorite!</string>
    <string name="no_favorites_and_likes">Like some tracks and add them to your favorites for better guess!</string>
    <string name="no_created_self">Try creating a track!</string>
    <string name="no_created_other">This user did not create a track yet!</string>
    <string name="add_photo">Photo</string>
    <string name="set_properties">Prop.</string>
    <string name="create_track">Create!</string>
    <string name="create_message">New track was successfully created !</string>
    <string name="properties_not_set">The properties must be set up</string>
    <string name="types_not_set">The types must be set up</string>
    <string name="need_name">A track needs a name!</string>
    <string name="time_needed">Time needed to complete the track</string>
    <string name="need_time">"A track needs a duration!"</string>
    <string name="properties_of_the_track">Properties of the Track</string>
    <string name="difficulty_is">"Difficulty is "</string>
    <string name="types" translatable="false">Types</string>
    <string name="choose_types">Choose the types of the track</string>
    <string name="default_time">Default run time was chosen</string>
    <string name="dismiss">Dismiss</string>
    <string name="noFilter">Do not filter</string>
    <string name="OK">OK</string>
    <string name="by">by %s</string>
    <string name="duration">Duration: %.2f minutes</string>
    <string name="distance">Distance: %.2f meters</string>
    <string name="difficulty">Difficulty: %.2f / 5.00</string>
    <string name="max_difficulty_of">At most a difficulty of </string>
    <string name="max_time_of">At most </string>
...
