<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical">

    <fragment
        android:id="@+id/create_map_view"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        tools:context=".tracks.creation.SetTrackDetailsActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/create_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:inputType="text" />

        <TextView
            android:id="@+id/create_text_total_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="" />

        <TextView
            android:id="@+id/create_text_total_altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="2">

            <Button
                android:id="@+id/create_track_button"
                style="@style/ButtonStyleCreateTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/create_track" />

            <Button
                android:id="@+id/add_photo_from_gallery"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/add_photo" />

            <Button
                android:id="@+id/set_properties"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/set_properties" />

            <Button
                android:id="@+id/types"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/types" />

        </GridLayout>


        <ImageView
            android:id="@+id/track_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/classic_margin"
            android:scaleType="centerCrop"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>