...
        android:max="5"
        android:progress="3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/diff_text"
        android:text="@string/difficulty_is"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/time_needed"
        android:inputType="numberDecimal"
        android:padding="20dp" />
...
